--- a/static/templates/layout/navigation.html
+++ b/static/templates/layout/navigation.html
@@ -32,7 +32,7 @@
             <li class="list__item">
                 <a class="item__link" href="/support" aria-label="Support">
                     Support
-                    <img src="{{ url_for('static', filename='images/link.svg') }}">
+                    <img src="/static/images/link.svg">
                 </a>
             </li>
             <li class="list__item">
