--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -7,7 +7,7 @@
         <!-- Logo -->
         <div class="container__logo">
             <a href="/">
-                <img src="{{ url_for('static', filename='images/logo.svg') }}" width="100%" height="100%" alt="Logo">
+                <img src="/static/images/logo.svg" width="100%" height="100%" alt="Logo">
             </a>
         </div>
 
