Update favicon handling and improve layout styles
- Changed SCSS file reference in `daemon.py` to use `STATIC_DIR` for style compilation.
- Removed obsolete favicon images (16x16 and 64x64) and replaced them with a new 256x256 favicon.
- Updated `base.html` to reference the new favicon and adjusted the layout to include the header within the content area.
- Enhanced navigation layout with new project links and improved styling for better user experience.
- Introduced new SVG shapes for visual elements in the navigation.

These changes streamline the favicon management and enhance the overall layout and navigation experience.

--- a/static/styles/layout/_header.scss
+++ b/static/styles/layout/_header.scss
@@ -1,7 +1,10 @@
 #header {
     border-bottom: 1px solid #e0e0e0;
+    position: sticky;
     height: 4rem;
     width: 100%;
+    z-index: var(--z-index-sticky);
+    top: 0;
 
     .header__container {
         max-width: 99rem;
