--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -14,8 +14,9 @@
 /* Pages */
 @import "./pages/_index";
 
-* {
+*,:after,:before {
     box-sizing: border-box;
+    border: 0 solid #ededed;
 }
 
 html {
@@ -26,6 +27,7 @@ html {
                  system-ui, Segoe UI, Helvetica,
                  Apple Color Emoji, Arial,sans-serif,
                  Segoe UI Emoji, Segoe UI Symbol;
+    font-feature-settings: normal;
     font-variation-settings: normal;
     line-height: 1.5;
     tab-size: 4
@@ -34,7 +36,7 @@ html {
 body {
     background: #ffffff;
     font-size: 16px;
-    color: #161616;
+    color: #0d0d0d;
     margin: 0;
     width: 100%;
     height: 100%;
@@ -76,7 +78,14 @@ button, a {
 }
 
 #app {
-    min-height: 100%;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+    #content {
+        flex-grow: 1;
+        max-height: 100%;
+        overflow: auto;
+    }
 }
