--- a/static/templates/layout/navigation.html
+++ b/static/templates/layout/navigation.html
@@ -1,46 +1,64 @@
 <nav id="navigation" aria-label="Navigation">
     <div class="navigation__container">
-        <ul class="container__list">
+        <a class="container__logo" href="/">
+            <img src="/static/images/favicon.svg" draggable="false" width="29" height="29">
+        </a>
+        <div class="container__list">
             <!-- Menu items -->
-            <li class="list__item">
-                <a class="item__link" href="/" aria-label="Home">Home</a>
-            </li>
-            <li class="list__item">
-                <a class="item__link" href="/top" aria-label="Top Prefixes">Top Prefixes</a>
-            </li>
-            <li class="list__item">
-                <a class="item__link" href="#" aria-label="Collectors">
-                    <span>Collectors</span>
-                    <i class="fa-sharp fa-light fa-angle-down"></i>
-                </a>
-                <ul class="item__dropdown">
-                    <!-- Dropdown items -->
-                    <li class="dropdown__item">
-                        <a class="item__link" href="/ris" aria-label="RIS">RIS</a>
-                    </li>
-                    <li class="dropdown__item">
-                        <a class="item__link" href="/routeviews" aria-label="RouteViews">RouteViews</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="list__item">
-                <a class="item__link" href="/looking-glass" aria-label="Looking Glass">Looking Glass</a>
-            </li>
-            <li class="list__item">
-                <a class="item__link" href="/whois" aria-label="Whois">Whois</a>
-            </li>
-            <li class="list__item">
-                <a class="item__link" href="/support" aria-label="Support">
-                    Support
-                    <img src="/static/images/link.svg">
-                </a>
-            </li>
-            <li class="list__item">
-                <a class="item__link" href="/api" aria-label="API">API</a>
-            </li>
+            <div class="list__title">Projects</div>
+            <a class="list__link list__link--active" href="/project/bgpdata">
+                <img src="/static/images/shape-1.svg" draggable="false">
+                BGPDATA
+            </a>
+            <a class="list__link" href="/project/ris-kafka">
+                <img src="/static/images/shape-3.svg" draggable="false">
+                RIS Kafka
+            </a>
+            <button class="list__button">
+                <i class="fa-sharp fa-light fa-plus"></i>
+                <span>New Project</span>
+            </button>
+            <hr class="list__divider">
+            <div class="list__title">Manage</div>
+            <a class="list__link" href="/studios">
+                Studios
+            </a>
+            <a class="list__link" href="/images">
+                Images
+            </a>
+            <a class="list__link" href="/containers">
+                Containers
+            </a>
+            <a class="list__link" href="/volumes">
+                Volumes
+            </a>
+            <a class="list__link" href="/databases">
+                Databases
+            </a>
+            <a class="list__link" href="/registries">
+                Registries
+            </a>
+            <a class="list__link" href="/machines">
+                Machines
+            </a>
+            <a class="list__link" href="/add-ons">
+                Add-ons
+            </a>
+            <hr class="list__divider">
+            <a class="list__link" href="/billing">
+                Billing
+            </a>
+            <a class="list__link" href="/support">
+                Support
+            </a>
+            <a class="list__link" href="/settings">
+                Settings
+            </a>
+            <hr class="list__divider">
+            <a class="list__link" href="/documentation">
+                Product Docs
+                <img src="/static/images/link.svg">
+            </a>
         </ul>
-        <section class="container__actions">
-            <a class="actions__button" href="/peer" aria-label="Peer with us">Peer with us</a>
-        </section>
     </div>
 </nav>
