Remove unused SVG icon and update search bar and header styles
- Deleted the obsolete link.svg file from the static images.
- Refined the search bar styles, adjusting padding and font sizes for better alignment and usability.
- Updated the header styles, reducing its height and modifying padding for improved layout.
- Simplified the navigation by removing unnecessary links and enhancing the visual elements.

These changes enhance the overall user interface and streamline the codebase by removing unused assets.

--- a/static/templates/layout/navigation.html
+++ b/static/templates/layout/navigation.html
@@ -41,13 +41,7 @@
             <a class="list__link" href="/machines">
                 Machines
             </a>
-            <a class="list__link" href="/add-ons">
-                Add-ons
-            </a>
             <hr class="list__divider">
-            <a class="list__link" href="/billing">
-                Billing
-            </a>
             <a class="list__link" href="/support">
                 Support
             </a>
@@ -56,8 +50,8 @@
             </a>
             <hr class="list__divider">
             <a class="list__link" href="/documentation">
+                <i style="color: #8f8f8f" class="fa-kit fa-arrow-up-right-from-square"></i>
                 Product Docs
-                <img src="/static/images/link.svg">
             </a>
         </ul>
     </div>
