--- a/static/styles/components/_searchbar.scss
+++ b/static/styles/components/_searchbar.scss
@@ -3,31 +3,16 @@
     height: 100%;
     width: 100%;
     position: relative;
-
-    &:after {
-        content: '';
-        display: block;
-        height: 2.5px;
-        width: 100%;
-        background: transparent;
-        position: absolute;
-        bottom: -1px;
-        left: 0;
-    }
-
-    &:focus-within {
-        &:after {
-            background: #204ff5;
-        }
-    }
+    overflow: hidden;
 
     & > i {
         pointer-events: none;
         fill: #525252;
         position: absolute;
-        left: 19px;
+        left: 10px;
         top: 50%;
-        font-size: 1.5rem;
+        width: 20px;
+        font-size: 1.125rem;
         transform: translateY(-50%);
     }
 
@@ -36,28 +21,21 @@
     }
 
     .searchbar__input {
-        padding-left: 3.75rem;
-        padding-right: 3rem;
-        font-family: inherit;
-        font-size: 1.15rem;
         border: 0;
         height: 100%;
         width: 100%;
+        color: inherit;
+        line-height: inherit;
+        font-family: inherit;
+        font-size: 0.875rem;
         font-weight: 300;
-        line-height: 1.375rem;
-        letter-spacing: 0;
-        outline: 2px solid transparent;
-        outline-offset: -2px;
-        color: #161616;
-        text-overflow: ellipsis;
-        background-color: #f4f4f4;
-        transition: background-color 110ms cubic-bezier(0.2, 0, 0.38, 0.9), outline 110ms cubic-bezier(0.2, 0, 0.38, 0.9);
+        padding-left: 2.75rem;
         appearance: none;
         outline: none;
 
         &::placeholder {
-            color: #525252;
-            font-weight: 250;
+            color: #8f8f8f;
+            font-weight: 300;
         }
     }
 }
