--- a/static/styles/layout/_header.scss
+++ b/static/styles/layout/_header.scss
@@ -1,31 +1,17 @@
 #header {
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom-width: 1px;
     position: sticky;
-    height: 4rem;
+    height: 3.5rem;
     width: 100%;
     z-index: var(--z-index-sticky);
     top: 0;
 
     .header__container {
-        max-width: 99rem;
-        margin-left: auto;
-        margin-right: auto;
         height: 100%;
+        padding: 0.5rem;
         display: flex;
         align-items: center;
-        padding-left: 2.5rem;
-        padding-right: 21px;
-        justify-content: space-between;
-
-        .container__skip-to-content {
-            display: none;
-        }
-
-        .container__logo {
-            height: 35.5px;
-            flex-shrink: 0;
-            margin-right: 3rem;
-        }
+        column-gap: 1rem;
 
         .container__actions {
             display: flex;
