--- a/static/styles/layout/_navigation.scss
+++ b/static/styles/layout/_navigation.scss
@@ -11,13 +11,11 @@
         height: 100%;
 
         .container__logo {
-            padding: 1.25rem;
-            margin-bottom: -0.25rem;
+            padding: 1rem 1.25rem;
             display: block;
         }
 
         .container__list {
-            height: 100%;
             padding: 0 0.5rem;
             font-size: 0.875rem;
             font-weight: 300;
