--- a/static/templates/components/searchbar.html
+++ b/static/templates/components/searchbar.html
@@ -8,14 +8,14 @@
     <label
         class="searchbar__label"
         for="searchbar"
-    >Enter an IP address/prefix, ASN, hostname or community</label
+    >Search by resource name or public IP</label
     ><input
         class="searchbar__input"
         type="text"
         role="searchbox"
         autocomplete="off"
         id="searchbar"
-        placeholder="Enter an IP address/prefix, ASN, hostname or community"
+        placeholder="Search by resource name or public IP"
         name="query"
     />
 </form>
