--- a/static/styles/components/_searchbar.scss
+++ b/static/styles/components/_searchbar.scss
@@ -29,6 +29,7 @@
         font-family: inherit;
         font-size: 0.875rem;
         font-weight: 300;
+        background: none;
         padding-left: 2.75rem;
         appearance: none;
         outline: none;
