--- a/static/templates/layout/navigation.html
+++ b/static/templates/layout/navigation.html
@@ -48,7 +48,7 @@
             <a class="list__link" href="/settings">
                 Settings
             </a>
-            <hr class="list__divider">
+            <hr class="list__divider list__divider--grow">
             <a class="list__link" href="/documentation">
                 <i style="color: #8f8f8f" class="fa-kit fa-arrow-up-right-from-square"></i>
                 Product Docs
