--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -1,165 +1,114 @@
 
 .content__index {
-    .index__hero {
-        padding-right: 2.5rem;
-        padding-left: 2.5rem;
+    padding: 2.5rem;
+
+    .index__header {
         margin-right: auto;
         margin-left: auto;
         max-width: 99rem;
-        margin-bottom: 6rem;
 
-        .hero__container {
-            display: block;
-            flex: 0 0 75%;
-            max-width: 75%;
-            margin-left: 25%;
-            margin-top: 4rem;
+        .header__container {
+            display: flex;
+            column-gap: 1rem;
 
-            .container__welcome-message {
-                display: block;
-                font-weight: 400;
-                margin-top: 2rem;
-                margin-bottom: 8px;
-                padding-right: 1rem;
-                padding-left: 1rem;
-                font-size: calc(1rem + 0.25*((100vw - 20rem) / 22));
-            }
-    
-            .container__heading {
-                font-weight: 500;
-                line-height: 5rem;
-                letter-spacing: 0;
-                font-size: 3.5rem;
+            .header__image {
+                width: 74px;
+                height: 74px;
+                border-radius: 10px;
+                outline: 1px solid rgba(0, 0, 0, 0.12);
+                outline-offset: -1px;
             }
 
-            .container__search {
-                height: 4rem;
-                margin-bottom: 5rem;
-                display: block;
-                flex: 0 0 83.33333%;
-                max-width: 83.33333%;
-                width: 100%;
-                position: relative;
-
-                & > i {
-                    pointer-events: none;
-                    fill: #525252;
-                    position: absolute;
-                    left: 17px;
-                    top: 50%;
-                    font-size: 1.625rem;
-                    transform: translateY(-50%);
+            .header__content {
+                .content__title {
+                    font-size: 2rem;
+                    font-weight: 600;
+                    line-height: 1.2;
                 }
 
-                .search__label {
-                    display: none;
-                }
-
-                .search__input {
-                    padding-left: 3.75rem;
-                    padding-right: 3rem;
-                    font-family: inherit;
-                    font-size: 1.33rem;
-                    border: 0;
-                    height: 100%;
-                    width: 100%;
-                    font-weight: 250;
-                    line-height: 1.375rem;
-                    letter-spacing: 0;
-                    outline: 2px solid transparent;
-                    outline-offset: -2px;
-                    color: #161616;
-                    text-overflow: ellipsis;
-                    background-color: #f4f4f4;
-                    border-bottom: 1px solid #8d8d8d;
-                    transition: background-color 110ms cubic-bezier(0.2, 0, 0.38, 0.9), outline 110ms cubic-bezier(0.2, 0, 0.38, 0.9);
-                    appearance: none;
-
-                    &::placeholder {
-                        color: #525252;
-                    }
-
-                    &:focus {
-                        outline: 2px solid #204ff5;
-                        outline-offset: -2px;
-                    }
-                }
-
-                .search__quickstart {
-                    display: flex;
-                    justify-content: space-between;
-                    position: absolute;
-                    width: 100%;
-                    bottom: -2rem;
-                    left: 0;
+                .content__description {
                     font-size: 1rem;
-                    font-weight: 350;
-                    line-height: 1.375em;
-                    letter-spacing: 0;
-                    color: #161616;
-
-                    a {
-                        color: #204ff5;
-                        text-decoration: none;
-
-                        &:hover {
-                            text-decoration: underline;
-                        }
-                    }
+                    font-weight: 400;
+                    line-height: 1.5;
                 }
             }
+        }
+    }
 
-            .container__cards {
-                width: 100%;
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
+    .index__tabs {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 99rem;
+        border-bottom-width: 1px;
 
-                .cards__item {
-                    border: 1px solid #c6c6c6;
-                    display: flex;
-                    flex-direction: column;
-                    padding: 1rem;
-                    min-height: 10rem;
+        .tabs__container {
+            display: flex;
+            flex-wrap: wrap;
+            max-width: 99rem;
+            height: 3.125rem;
+            margin-right: auto;
+            margin-left: auto;
+            padding: 0 2.5rem;
+
+            .container__tabs {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                position: relative;
+                margin-bottom: -1px;
+
+                .tab__item {
+                    padding: 0 1.5rem;
                     height: 100%;
-                    justify-content: space-between;
-                    text-decoration: none;
+                    display: flex;
+                    min-width: 12.5rem;
+                    background: #e0e0e0;
+                    border-left: 1px solid #afafaf;
+                    position: relative;
+                    font-weight: 350;
                     cursor: pointer;
+                    text-align: left;
+                    align-items: center;
 
-                    &:not(:last-child) {
-                        border-right: 0;
-                    }
-                    
-                    &:hover {
-                        background: #D0E1FF;
-                    }
-                    
-                    &:active {
-                        outline: 2px solid #204ff5;
-                        outline-offset: -2px;
+                    &:first-child:before {
+                        width: calc(100% + 1px);
+                        left: -1px;
                     }
 
-                    .item__title {
-                        font-size: 1.125rem;
-                        font-weight: 600;
-                        line-height: 1.75rem;
-                        letter-spacing: 0;
-                        margin-bottom: 0.5rem;
-                        color: #161616;
+                    &:last-child:before {
+                        width: calc(100% + 1px);
                     }
 
-                    .item__description {
-                        margin-bottom: 2rem;
-                        font-size: 1rem;
-                        font-weight: 350;
-                        line-height: 1.5em;
-                        letter-spacing: 0;
-                        width: 90%;
-                        max-width: 40rem;
+                    &:before {
+                        content: '';
+                        display: block;
+                        height: 2.5px;
+                        width: 100%;
+                        background: transparent;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
                     }
 
-                    i {
-                        font-size: 1.125rem;
-                        color: #204ff5;
+                    &:first-child:not(.tab__item--active) {
+                        border-left-color: transparent !important;
+                    }
+
+                    &:last-child:is(.tab__item--active) {
+                        border-right: 1px solid #e0e0e0;
+                    }
+
+                    &--active {
+                        background: #ffffff;
+                        border-left: 1px solid #e0e0e0;
+
+                        &:before {
+                            background: #204ff5;
+                        }
+
+                        & + .tab__item {
+                            border-left-color: transparent !important;
+                        }
                     }
                 }
             }
@@ -167,19 +116,27 @@
     }
 
     .index__content {
-        background: #f4f4f4;
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 100%;
 
-        .content__wrapper {
-            padding: 2rem 2.5rem;
+        .content__container {
+            display: flex;
+            flex-wrap: wrap;
+            max-width: 99rem;
             margin-right: auto;
             margin-left: auto;
-            max-width: 99rem;
-
-            .wrapper__container {
+    
+            .container__content {
                 display: flex;
-                flex-wrap: wrap;
-                margin-right: -1rem;
-                margin-left: -1rem;
+                flex-direction: column;
+                width: 100%;
+                padding: 2.25rem 2.5rem;
+                row-gap: 1rem;
+
+                .content__panel {
+                    // TODO: Add content
+                }
             }
         }
     }
