Enhance styles and update navigation
- Added margin reset for heading elements (h1-h6) in main.scss for consistent spacing.
- Adjusted header image dimensions and added margin to the header content in _index.scss for improved layout.
- Refined tab item styles, including padding and hover effects, to enhance user interaction.
- Updated project links in navigation.html and index.html to reflect new project names and improve clarity.
- Modified content panel IDs and tab switching logic in index.html for better functionality.

These changes improve the overall design and user experience across the application.

--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -27,7 +27,7 @@
                 {% block content %}
                 <!-- Content Here -->
                 {% endblock %}
-                {% include "layout/footer.html" %}
+                <!-- {% include "layout/footer.html" %} -->
             </div>
         </main>
     </body>
