--- a/static/templates/layout/navigation.html
+++ b/static/templates/layout/navigation.html
@@ -6,13 +6,13 @@
         <div class="container__list">
             <!-- Menu items -->
             <div class="list__title">Projects</div>
-            <a class="list__link list__link--active" href="/project/bgpdata">
+            <a class="list__link list__link--active" href="/project/stratum">
                 <img src="/static/images/shape-1.svg" draggable="false">
-                BGPDATA
+                Stratum
             </a>
-            <a class="list__link" href="/project/ris-kafka">
+            <a class="list__link" href="/project/crystalline">
                 <img src="/static/images/shape-3.svg" draggable="false">
-                RIS Kafka
+                Crystalline
             </a>
             <button class="list__button">
                 <i class="fa-sharp fa-light fa-plus"></i>
