--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -77,6 +77,10 @@ button, a {
     outline: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
 #app {
     height: 100vh;
     display: flex;
