--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -6,14 +6,15 @@
         margin-right: auto;
         margin-left: auto;
         max-width: 99rem;
+        margin-bottom: 1.5rem;
 
         .header__container {
             display: flex;
             column-gap: 1rem;
 
             .header__image {
-                width: 74px;
-                height: 74px;
+                width: 60px;
+                height: 60px;
                 border-radius: 10px;
                 outline: 1px solid rgba(0, 0, 0, 0.12);
                 outline-offset: -1px;
@@ -21,15 +22,31 @@
 
             .header__content {
                 .content__title {
-                    font-size: 2rem;
-                    font-weight: 600;
-                    line-height: 1.2;
+                    font-weight: 200;
+                    line-height: 1;
+                    margin-bottom: 0.75rem;
+                    display: flex;
+                    column-gap: 0.75rem;
+                    align-items: center;
+
+                    .title__default {
+                        font-size: 0.875rem;
+                        font-weight: 200;
+                        line-height: 1;
+                        height: fit-content;
+                        padding: 0.25rem 0.35rem;
+                        margin-bottom: -2px;
+                        border-radius: 5px;
+                        color: #8f8f8f;
+                        background: #f6f6f6;
+                    }
                 }
 
                 .content__description {
                     font-size: 1rem;
-                    font-weight: 400;
-                    line-height: 1.5;
+                    font-weight: 200;
+                    line-height: 1;
+                    color: #8f8f8f;
                 }
             }
         }
@@ -45,69 +62,49 @@
             display: flex;
             flex-wrap: wrap;
             max-width: 99rem;
-            height: 3.125rem;
+            height: 55px;
             margin-right: auto;
             margin-left: auto;
-            padding: 0 2.5rem;
 
             .container__tabs {
                 display: flex;
                 flex-direction: row;
+                column-gap: 0.25rem;
                 align-items: center;
                 position: relative;
-                margin-bottom: -1px;
+                margin-left: -0.75rem;
 
                 .tab__item {
-                    padding: 0 1.5rem;
-                    height: 100%;
+                    padding: 0.425rem 0.75rem;
+                    border-radius: 8px;
                     display: flex;
-                    min-width: 12.5rem;
-                    background: #e0e0e0;
-                    border-left: 1px solid #afafaf;
                     position: relative;
-                    font-weight: 350;
+                    font-weight: 300;
                     cursor: pointer;
-                    text-align: left;
-                    align-items: center;
 
-                    &:first-child:before {
-                        width: calc(100% + 1px);
-                        left: -1px;
+                    &:active {
+                        background: #0000000f;
+                    }
+    
+                    &:hover {
+                        background: #0000000a;
                     }
 
-                    &:last-child:before {
-                        width: calc(100% + 1px);
-                    }
-
-                    &:before {
+                    &:after {
                         content: '';
                         display: block;
-                        height: 2.5px;
-                        width: 100%;
+                        height: 2px;
+                        width: calc(100% - 2 * 0.75rem);
                         background: transparent;
+                        border-radius: 4px;
                         position: absolute;
-                        top: 0;
-                        left: 0;
-                    }
-
-                    &:first-child:not(.tab__item--active) {
-                        border-left-color: transparent !important;
-                    }
-
-                    &:last-child:is(.tab__item--active) {
-                        border-right: 1px solid #e0e0e0;
+                        bottom: -10px;
+                        left: 0.75rem;
                     }
 
                     &--active {
-                        background: #ffffff;
-                        border-left: 1px solid #e0e0e0;
-
-                        &:before {
-                            background: #204ff5;
-                        }
-
-                        & + .tab__item {
-                            border-left-color: transparent !important;
+                        &:after {
+                            background: currentColor;
                         }
                     }
                 }
