--- a/static/templates/pages/index.html
+++ b/static/templates/pages/index.html
@@ -38,7 +38,25 @@ Clearly
         <div class="content__container">
             <div class="container__content">
                 <div class="content__panel" id="resources" aria-labelledby="tab-resources">
-                    Hello World!
+                    <div class="panel__title">Resources (<span id="containers-count">1</span>)</div>
+                    <div class="panel__list" id="containers-list">
+                        <div class="list__item">
+                            <i class="fa-kit fa-container"></i>
+                            <div class="item__name">rocky-linux-1vcpu-512mb-10GB</div>
+                            <div class="item__ip-address">10.42.21.123</div>
+                            <div class="item__status">Running</div>
+                            <div class="item__tags">
+                                <!-- <span class="tag__item"></span> -->
+                                <button class="tag__button">
+                                    Add tags
+                                </button>
+                            </div>
+                            <div class="item__actions">Upsize</div>
+                            <button class="item__more">
+                                <i class="fa-sharp fa-light fa-ellipsis"></i>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
