--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -86,10 +86,15 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    background: #f9f9f9;
 
     #content {
         flex-grow: 1;
         max-height: 100%;
         overflow: auto;
+        margin-top: 0.5rem;
+        border-width: 1px;
+        background: #ffffff;
+        border-top-left-radius: 1rem;
     }
 }
