--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -13,8 +13,8 @@
             column-gap: 1rem;
 
             .header__image {
-                width: 60px;
-                height: 60px;
+                width: 59px;
+                height: 59px;
                 border-radius: 10px;
                 outline: 1px solid rgba(0, 0, 0, 0.12);
                 outline-offset: -1px;
@@ -22,9 +22,9 @@
 
             .header__content {
                 .content__title {
-                    font-weight: 200;
+                    font-weight: 250;
                     line-height: 1;
-                    margin-bottom: 0.75rem;
+                    margin-bottom: 10px;
                     display: flex;
                     column-gap: 0.75rem;
                     align-items: center;
@@ -34,16 +34,16 @@
                         font-weight: 200;
                         line-height: 1;
                         height: fit-content;
-                        padding: 0.25rem 0.35rem;
+                        padding: 0.25rem 0.5rem;
                         margin-bottom: -2px;
-                        border-radius: 5px;
-                        color: #8f8f8f;
-                        border-width: 1px;
+                        border-radius: 11px;
+                        color: #5d5d5d;
+                        background: #ececec;
                     }
                 }
 
                 .content__description {
-                    font-size: 1rem;
+                    font-size: 0.938rem;
                     font-weight: 200;
                     line-height: 1;
                     color: #8f8f8f;
@@ -56,6 +56,7 @@
         margin-right: auto;
         margin-left: auto;
         max-width: 99rem;
+        margin-bottom: 1.5rem;
         border-bottom-width: 1px;
 
         .tabs__container {
@@ -125,30 +126,68 @@
             margin-left: auto;
     
             .container__content {
-                display: flex;
-                flex-direction: column;
                 width: 100%;
-                padding: 2.25rem 2.5rem;
-                row-gap: 1rem;
 
                 .content__panel {
                     .panel__title {
-                        font-size: 1.125rem;
-                        font-weight: 200;
-                        line-height: 1;
-                        color: #8f8f8f;
+                        font-size: 0.875rem;
+                        font-weight: 300;
+                        margin-bottom: 0.75rem;
                     }
 
                     .panel__list {
                         .list__item {
                             display: flex;
                             align-items: center;
-                            column-gap: 0.75rem;
+                            column-gap: 15px;
+                            padding: 0.5rem 1.125rem;
+                            height: 54px;
+                            border-width: 1px;
+                            border-color: #eaeaea;
+                            font-size: 0.938rem;
+                            cursor: pointer;
+                            width: 100%;
+                            border-radius: 8px;
+                            background: #ffffff;
+                            box-shadow: 1px 2px 4px rgba(0,0,0,.03);
 
-                            .item__icon {}
-                            .item__name {}
-                            .item__ip-address {}
-                            .item__status {}
+                            .item__status {
+                                width: 7px;
+                                height: 7px;
+                                border-radius: 50%;
+
+                                &--running {
+                                    background: #0bc26c;
+                                }
+
+                                &--stopped {
+                                    background: #bd3229;
+                                }
+
+                                &--unhealthy {
+                                    background: #bd3229;
+                                }
+
+                                &--completed {
+                                    background: #070707;
+                                }
+
+                                &--pending {
+                                    background: #9fa1a3;
+                                }
+                            }
+                            .item__icon {
+                                width: 19px;
+                            }
+                            .item__name {
+                                font-weight: 350;
+                            }
+                            .item__ip-address {
+                                flex-grow: 1;
+                                font-weight: 250;
+                                line-height: 1;
+                                color: #8f8f8f;
+                            }
                             .item__tags {}
                             .item__actions {}
                             .item__more {}
