--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -157,7 +157,7 @@
                                 border-radius: 50%;
 
                                 &--running {
-                                    background: #0bc26c;
+                                    background: #1ecf8c;
                                 }
 
                                 &--stopped {
