Improve link design

--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -192,7 +192,7 @@
                             .item__ports {
                                 text-decoration: none;
                                 font-weight: 250;
-                                color: #0167ff;
+                                color: #2675e8;
                             }
                             .item__image {
                                 font-weight: 250;
