--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -36,9 +36,9 @@
                         height: fit-content;
                         padding: 0.25rem 0.5rem;
                         margin-bottom: -2px;
-                        border-radius: 11px;
+                        border-radius: 8px;
                         color: #5d5d5d;
-                        background: #ececec;
+                        border-width: 1px;
                     }
                 }
 
