Clean up bad code

--- a/static/templates/layout/navigation.html
+++ b/static/templates/layout/navigation.html
@@ -7,11 +7,15 @@
             <!-- Menu items -->
             <div class="list__title">Projects</div>
             <a class="list__link list__link--active" href="/project/stratum">
-                <img src="/static/images/shape-1.svg" draggable="false">
+                <svg draggable="false">
+                    <use xlink:href="/static/images/sprite.svg#shape-1"></use>
+                </svg>
                 Stratum
             </a>
             <a class="list__link" href="/project/crystalline">
-                <img src="/static/images/shape-3.svg" draggable="false">
+                <svg draggable="false">
+                    <use xlink:href="/static/images/sprite.svg#shape-3"></use>
+                </svg>
                 Crystalline
             </a>
             <button class="list__button">
