--- a/static/templates/pages/index.html
+++ b/static/templates/pages/index.html
@@ -8,7 +8,9 @@ Clearly
 <div class="content__index">
     <div class="index__header">
         <div class="header__container">
-            <img class="header__image" src="/static/images/shape-1.svg">
+            <svg class="header__image" draggable="false">
+                <use xlink:href="/static/images/sprite.svg#shape-1"></use>
+            </svg>
             <div class="header__content">
                 <h1 class="content__title">
                     Stratum<span class="title__default">Default</span>
