--- a/static/styles/layout/_navigation.scss
+++ b/static/styles/layout/_navigation.scss
@@ -71,7 +71,7 @@
                     width: 20px;
                 }
 
-                img {
+                svg {
                     width: 20px;
                     height: 20px;
                     border-radius: 3px;
