Enhance item styling and link structure
- Added width to item icons for better alignment.
- Updated the item ports section to use flexbox for improved layout and spacing.
- Refined the link structure for ports to include an icon and better visual representation.

These changes improve the overall design and usability of the item display.

--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -179,6 +179,7 @@
                             .item__icon {
                                 font-size: 1.125rem;
                                 color: #b5bac1;
+                                width: 20.5px;
                             }
                             .item__name {
                                 font-weight: 350;
@@ -190,9 +191,18 @@
                                 color: #8f8f8f;
                             }
                             .item__ports {
-                                text-decoration: none;
-                                font-weight: 250;
-                                color: #2675e8;
+                                display: flex;
+                                column-gap: 0.25rem;
+
+                                .ports__item {
+                                    text-decoration: none;
+                                    font-weight: 250;
+                                    color: #307ef7;
+
+                                    i {
+                                        font-size: 0.875rem;
+                                    }
+                                }
                             }
                             .item__image {
                                 font-weight: 250;
