--- a/static/templates/pages/index.html
+++ b/static/templates/pages/index.html
@@ -50,7 +50,10 @@ Clearly
                             <div class="item__name">rocky-linux-1vcpu-512mb-10GB</div>
                             <div class="item__ip-address">10.42.21.123</div>
                             <div class="item__ports">
-                                <a href="http://localhost:8080" target="_blank"></a>8080:80</a>
+                                <a class="ports__item" href="http://localhost:8080" target="_blank">
+                                    <i class="fa-kit fa-arrow-up-right-from-square"></i>
+                                    8080:80
+                                </a>
                             </div>
                             <div class="item__image">
                                 bgpdata/collector:latest
