--- a/static/templates/pages/index.html
+++ b/static/templates/pages/index.html
@@ -41,28 +41,7 @@ Clearly
             <div class="container__content">
                 <div class="content__panel" id="resources" aria-labelledby="tab-resources">
                     <div class="panel__title">Containers (<span id="containers-count">1</span>)</div>
-                    <div class="panel__list" id="containers-list">
-                        <div class="list__item">
-                            <div class="item__status item__status--running"></div>
-                            <div class="item__icon">
-                                <i class="fa-kit fa-container"></i>
-                            </div>
-                            <div class="item__name">rocky-linux-1vcpu-512mb-10GB</div>
-                            <div class="item__ip-address">10.42.21.123</div>
-                            <div class="item__ports">
-                                <a class="ports__item" href="http://localhost:8080" target="_blank">
-                                    <i class="fa-kit fa-arrow-up-right-from-square"></i>
-                                    8080:80
-                                </a>
-                            </div>
-                            <div class="item__image">
-                                bgpdata/collector:latest
-                            </div>
-                            <button class="item__more">
-                                <i class="fa-sharp fa-light fa-ellipsis"></i>
-                            </button>
-                        </div>
-                    </div>
+                    <div class="panel__list" id="containers-list"></div>
                 </div>
             </div>
         </div>
@@ -96,5 +75,40 @@ Clearly
     const handleHashChange = () => switchTab(window.location.hash.slice(1) || 'resources');
     window.addEventListener('hashchange', handleHashChange);
     handleHashChange();
+</script>
+<script>
+    // Containers
+    Promise.all([
+        fetch(`/api/containers`).then(r => r.json())
+    ]).then(([containers]) => {
+        if (!containers.success) {
+            console.error(containers.error);
+            return;
+        }
+
+        document.getElementById('containers-count').innerHTML = containers.containers.length;
+        document.getElementById('containers-list').innerHTML = containers.containers.map(container => `
+            <div class="list__item">
+                <div class="item__status item__status--${container.status}"></div>
+                <div class="item__icon">
+                    <i class="fa-kit fa-container"></i>
+                </div>
+                <div class="item__name">${container.id}</div>
+                <div class="item__ip-address">10.20.12.1</div>
+                <div class="item__ports">
+                    ${Object.entries(container.publish).map(([host, container]) => `
+                    <a class="ports__item" href="${window.location.protocol}//${window.location.hostname}:${host}" target="_blank">
+                        <i class="fa-kit fa-arrow-up-right-from-square"></i>
+                        ${host}:${container}
+                    </a>
+                    `).join('')}
+                </div>
+                <div class="item__image">${container.image}</div>
+                <button class="item__more">
+                    <i class="fa-sharp fa-light fa-ellipsis"></i>
+                </button>
+            </div>
+        `).join('');
+    });
 </script>
 {% endblock %}
