--- a/static/templates/pages/index.html
+++ b/static/templates/pages/index.html
@@ -119,7 +119,7 @@ Clearly
         document.getElementById('containers-list').innerHTML = containers.containers.map(container => `
             <div class="list__item">
                 <div class="item__status item__status--${container.status}"></div>
-                <div class="item__icon">
+                <div class="item__icon item__icon--enlarged">
                     <i class="fa-kit fa-container"></i>
                 </div>
                 <div class="item__name">${container.id}</div>
